--- a/homepage.html
+++ b/homepage.html
@@ -28,7 +28,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">EasyAuto</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">EasyAutoConnect</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fas fa-bars"></i>
@@ -60,7 +60,7 @@
 			    <a href="claim_view.php" class="btn btn-primary js-scroll-trigger">My Claims</a>
 		  </h1>
          <h1>  
-			    <a href="form.html" class="btn btn-primary js-scroll-trigger">New Claim</a>
+			    <a href="claim_type.html" class="btn btn-primary js-scroll-trigger">New Claim</a>
 		  </h1>
         </div>
       </div>
